--- a/templates/trip/new.html.twig
+++ b/templates/trip/new.html.twig
@@ -49,7 +49,7 @@
 									<div class="trip-info" style="background-color: {{ tripColor }}; color: {{ textColor }};">
 										<strong>Conductor:
 										</strong>
-										{{ trip.driver.name }}<br>
+										{{ trip.driver.name }} {{ trip.driver.lastName }}<br>
 										<strong>Entrada:
 										</strong>
 										{{ entryHourIntervals[trip.entrySlot] }}<br>
