--- a/templates/users/main.html.twig
+++ b/templates/users/main.html.twig
@@ -30,7 +30,7 @@
 								<p class="value">{{ driver.seats }}</p>
 							</div>
 							<div class="expanded_card">
-								<p class="label">Días conducidos:</p>
+								<p class="label">Viajes realizados:</p>
 								<p class="value">{{ driver.daysDriven }}</p>
 							</div>
 							<div class="expanded_card">
